<resources>
        <string name="google_play_license" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAwsWgfleWZkA10T0vBfjVZ2Nzr8Yp7SKMLzhqq8CKCUcy/IYVdlKf31jT3IzO4tqLYnovStMTOEK3LCHBlJZSzdhKN4dqCjtap6+8MsE9gx4U3fvb+cccxZIIJpK5HM3DbXmuPNqneBEfSy1yVtEAt2KBAfZAOX7hajpmvnNnaGuKapz2eCJNOobuV7goKngWP/QYmYoOW5Hg+et7qwOrd6ZlkMixnbgXs5wjrqTItxrjwcdMPWnDzawSRpcT/ELGNy4p5KUw2HLVUuMdVwXsDg73Udyhx3a0ddO/as9wdG4EJ0uo0J2jsaSe1iFNRjyIyGKM6Cd2WH8oMqp/qzUZPQIDAQAB</string>
        <string name="product_id" translatable="false">404sunshinenotesdisads_spiral.bit.dev</string>
        <string name="admob_banner_id" translatable="false">ca-app-pub-7780453585001831/5798151852</string>
        <string name="admob_create_note_banner_id" translatable="false">ca-app-pub-7780453585001831/1618464155</string>
        <string name="admob_interstitial_id" translatable="false">ca-app-pub-7780453585001831/5943896594</string>
        <string name="admob_app_id" translatable="false">ca-app-pub-7780453585001831~8275113711</string>
    <string name="not_open_playstore">Не найдено приложение Google Play</string>
    <string name="settings_other_summary">Другое</string>
    <string name="settings_other">Оценить</string>
    <string name="settings_rate_summary">Поставьте оценку и отзыв о приложении</string>
    <string name="settings_rate">Оцените приложение</string>
    <string name="settings_billing_summary">Управление покупками</string>
    <string name="settings_billing">Покупки в приложении</string>
    <string name="settings_purchase_summary">Отключение рекламы в приложении</string>
    <string name="settings_purchase">Отключение рекламы</string>
    <string name="settings_restore_purchase_success">Покупка восстановлена</string>
    <string name="settings_purchase_success">Благодарю за покупку :) \nДля отключения рекламы перезапустите приложение!</string>
    <string name="settings_purchase_fail">Ошибка покупки</string>
    <string name="cd_icon_search">SEARCH ICON</string>
    <string name="cd_add_note_icon">ADD NOTE ICON</string>
    <string name="cd_add_image_icon">ADD IMAGE ICON</string>
    <string name="cd_icon_add_btn">ICON ADD BTN</string>
    <string name="cd_icon_image_back">IMAGE BACK ICON</string>
    <string name="cd_icon_save">ICON SAVE</string>
    <string name="cd_image_icon">IMAGE ICON</string>
    <string name="cd_add_img_icon">ADD IMAGE ICON</string>
    <string name="cd_image_color_1">IMAGE COLOR 1</string>
    <string name="cd_add_url_icon">ADD URL ICON</string>
    <string name="cd_icon_remove">ICON REMOVE (DELETE)</string>
    <string name="cd_icon_delete_image">ICON DELETE IMAGE</string>
    <string name="cd_icon_delete_note">ICON DELETE NOTE</string>
    <string name="icon_clear_text_cd">ICON CLEAR TEXT</string>
    <string name="icon_brush_cd">ICON BRUSH</string>
    <string name="icon_clear_all_cd">ICON CLEAR ALL</string>
    <string name="icon_select_size_cd">ICON SELECT SIZE</string>
    <string name="colour_1_cd">COLOUR 1</string>
    <string name="colour_2_cd">COLOUR 2</string>
    <string name="colour_3_cd">COLOUR 3</string>
    <string name="colour_4_cd">COLOUR 4</string>
    <string name="colour_5_cd">COLOUR 5</string>
    <string name="colour_6_cd">COLOUR 6</string>
    <string name="colour_7_cd">COLOUR 7</string>
    <string name="colour_8_cd">COLOUR 8</string>
    <string name="colour_9_cd">COLOUR 9</string>
    <string name="icon_erase_cd">ICON ERASE</string>
    <string name="icon_attach_cd">ICON ATTACH</string>
    <string name="intro_image_cd">INTRO IMAGE</string>
    <string name="icon_music_cd">Icon music</string>
    <string name="app_name">Sunshine Notes</string>
    <string name="my_notes_label">Мои Заметки</string>
    <string name="search_hint_search_et">Поиск по заметкам…</string>
    <string name="enter_title_of_note">Введите заголовок заметки…</string>
    <string name="enter_note_subtitle_hint">Подзаголовок…</string>
    <string name="type_note_here_hint">Пишите здесь…</string>
    <string name="toast_error_title_empty">Введите заголовок заметки!</string>
    <string name="toast_error_empty_note">Заметка не может быть пустой!</string>
    <string name="pick_color_label">Выберите цвет</string>
    <string name="add_img_label">Добавить изображение</string>
    <string name="error_toast_perm_denied">В доступе к хранилищу отказано :(</string>
    <string name="error_add_img_toast">Ой, картинку не получается добавить :(</string>
    <string name="add_ref_label">Добавить ссылку</string>
    <string name="enter_ref_hint">Введите ссылку…</string>
    <string name="add_label">Добавить</string>
    <string name="cancel_label">Отменить</string>
    <string name="error_toast_ref_empty">Ссылка не может быть пустой!</string>
    <string name="error_toast_not_valid_ref">Введите валидную ссылку!</string>
    <string name="delete_note_label">Удалить заметку</string>
    <string name="are_you_sure_delete_note_message">Вы уверены в том, что хотите удалить эту заметку?</string>
    <string name="not_found_label">Ничего не найдено.\n Попробовать ещё раз ?</string>
    <string name="add_voice_record_label">Добавить запись голоса</string>
    <string name="record_voice_label">Запись голоса</string>
    <string name="cd_settings_icon">PIN CODE ICON</string>
    <string name="pin_code_success">Пин-код верный.</string>
    <string name="pin_code_failure">Пин-код неверный.</string>
    <string name="enter_pin_code">Введите пин-код из 5 цифр.</string>
    <string name="re_enter_pin_code">Введите пин-код повторно</string>
    <string name="sure_go">Всё равно перейти</string>
    <string name="next_label">Далее</string>
    <string name="exit_app_label">Вы вышли не сохранив заметку.</string>
    <string name="save_note_label">Сохранить заметку</string>
    <string name="exit_dialog_save_label">Сохранить последнюю несохранённую заметку?</string>
    <string name="forget_password_label">Забыл пин-код</string>
    <string name="set_pin_code_label">Установка пин-кода</string>
    <string name="label_forget_pass">Добавьте секретное слово.\n Если вы забудете пин-код, \n это поможет вам открыть приложение</string>
    <string name="enter_secret_word_label">Введите секретное слово</string>
    <string name="cancel_dont_care">Отменить, \nя не забуду пин-код</string>
    <string name="secret_word_added_toast">Секретное слово добавлено!</string>
    <string name="forget_pin_code">Забыли пин-код?</string>
    <string name="label_enter_secret_word">Введите секретное слово</string>
    <string name="enter_label">Подтвердите</string>
    <string name="info_about_note_label">Информация о заметке</string>
    <string name="close_label">Закрыть</string>
    <string name="date_note_created_label">Дата создания заметки:</string>
    <string name="date_edit_label">Дата редактирования не задана</string>
    <string name="are_you_sure_label">Вы хотите установить новый\n пин-код?</string>
    <string name="yes_label">Да</string>
    <string name="if_pin_code_set_yet">Если у вас уже был установлен пин-код,\n он будет заменён на новый.</string>
    <string name="add_remind_label">Поставить напоминание</string>
    <string name="remove_pin_code_label">Снятие пин-кода</string>
    <string name="are_you_sure_remove_pin_code_label">Вы точно хотите снять свой пин-код?</string>
    <string name="remove_pin_label">Снять пин-код</string>
    <string name="pin_successfully_removed">Пин-код успешно снят!</string>
    <string name="set_remind_label">Установить</string>
    <string name="read_mode_enabled_toast">Режим чтения включен!</string>
    <string name="remember_my_choice_label">Запомнить мой выбор</string>
    <string name="time_to_do_complete_label">Пора приступать к выполнению:</string>
    <string name="ticker_label">SUNSHINE NOTES</string>
    <string name="notification_label">Уведомления</string>
    <string name="sound_enabled">Звук включен</string>
    <string name="sound_disabled">Звук выключен</string>
    <string name="info_img_error_toast">Нельзя просмотреть информацию\n о несозданной заметке!</string>
    <string name="set_password_label">Установка пароля</string>
    <string name="password_add_label">Придумайте пароль…</string>
    <string name="password_set_up">Пароль установлен!</string>
    <string name="password_enter_label">Введите пароль…</string>
    <string name="password_wrong">Пароль неверный!</string>
    <string name="create_lock_pattern_label">Создайте графический ключ</string>
    <string name="submit_label">Подтвердить</string>
    <string name="enter_graphic_key">Введите графический ключ</string>
    <string name="type_of_lock_label">Какой тип блокировки вы хотите поставить?</string>
    <string name="graphic_key_label">Графический ключ</string>
    <string name="pin_code_label">Пин-код</string>
    <string name="password_desc_label">Лучше всего придумать пароль, \n который включает в себя заглавные буквы, \n латиницу, цифры и символы, а длина которого \n будет более 8 символов.</string>
    <string name="add_draw_label">Добавить рисунок</string>
    <string name="save_label">СОХРАНИТЬ</string>
    <string name="big_size_label">Большой размер</string>
    <string name="medium_size_label">Средний размер</string>
    <string name="small_size_label">Маленький размер</string>
    <string name="def_size_label">Размер кисти по-умолчанию</string>
    <string name="graphic_key_not_right">Графический ключ неверный.</string>
    <string name="enter_your_password">Введите ваш пароль</string>
    <string name="password_isnt_right">Пароль неверный!</string>
    <string name="hint_pass">Введите пароль…</string>
    <string name="enabled">Включено</string>
    <string name="disabled">Выключено</string>
    <string name="toasts_label">Всплывающие сообщения</string>
    <string name="show_label">Отображать</string>
    <string name="not_show_label">Не отображать</string>
    <string name="settings_label">Настройки</string>
    <string name="settings_not_reset_label">Настройки не сброшены</string>
    <string name="settings_reset_label">Настройки сброшены</string>
    <string name="reset_settings_label">Сбросить все настройки</string>
    <string name="save_note_on_exit_label">Сохранять заметку при выходе</string>
    <string name="share_note_label">Поделиться заметкой</string>
    <string name="label_how_share">Как вы хотите поделиться заметкой?</string>
    <string name="with_draw_label">С рисунком</string>
    <string name="with_image_label">С изображением</string>
    <string name="only_text_label">Только текст</string>
    <string name="def_style_label">Шрифт по-умолчанию</string>
    <string name="comissioner_text_label">Commissioner</string>
    <string name="roboto_style_label">Roboto</string>
    <string name="sourcecode_style_label">Sourcecode</string>
    <string name="text_size_label">Размер текста</string>
    <string name="def_color_label">Цвет по-умолчанию</string>
    <string name="yellow_color_label">Желтый</string>
    <string name="green_color_label">Зелёный</string>
    <string name="red_color_label">Красный</string>
    <string name="def_text_size_label">Размер по-умолчанию</string>
    <string name="small_text_size_label">Маленький</string>
    <string name="medium_text_size_label">Средний</string>
    <string name="big_text_size_label">Большой</string>
    <string name="font_label">Шрифт</string>
    <string name="text_color_label">Цвет текста</string>
    <string name="delete_note_forever_label">Удалить заметку навсегда</string>
    <string name="restore_note_label">Восстановить из корзины</string>
    <string name="ads_fuck_label">Надоела реклама?</string>
    <string name="disable_ads_click_label">Вы всегда можете отключить рекламу на час кликнув на неё!</string>
    <string name="ok_label">Ок, закрыть</string>
    <string name="dis_ad_label">Отключить рекламу</string>
    <string name="buy_disable_ads_label">Или же отключить её навсегда за один доллар :)</string>
    <string name="not_show_more_label">Больше не показывать</string>
</resources>