<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PinCodeActivity">

    <com.hanks.passcodeview.PasscodeView
        android:id="@+id/passcodeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentTheme"
        app:correctInputTip="@string/pin_code_success"
        app:correctStateColor="@color/correct_pin_color"
        app:firstInputTip="@string/enter_pin_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:normalStateColor="@color/moonColor"
        app:numberTextColor="@color/number_pin_color"
        app:passcodeLength="5"
        app:passcodeViewType="set_passcode"
        app:secondInputTip="@string/re_enter_pin_code"
        app:wrongInputTip="@string/pin_code_failure"
        app:wrongStateColor="@color/wrong_pin_color">

    </com.hanks.passcodeview.PasscodeView>

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:background="@drawable/background_next_btn"
        android:onClick="forgetPassword"
        android:text="@string/forget_password_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>