<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_misc_restore"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_misc"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/attach"
        android:layout_marginTop="5dp"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:src="@drawable/icauto_delete"
        app:tint="@color/colorIcons"
        android:contentDescription="@string/icon_attach_cd" />

    <LinearLayout
        android:id="@+id/layout_restore_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/cd_add_img_icon"
            android:src="@drawable/ic_restore"
            android:layout_gravity="center"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:layout_gravity="center"
            android:text="@string/restore_note_label"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_14ssp"
            android:layout_marginLeft="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete_note_forever"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/cd_icon_delete_note"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:textColor="@color/colorDelete"
            android:textSize="@dimen/_14ssp"
            android:text="@string/delete_note_forever_label"
            android:layout_marginLeft="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>