<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_share_note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_delete"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/cd_icon_delete_note"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/share_note_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/image_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_delete"
        app:layout_constraintStart_toEndOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_delete_note_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/label_how_share"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_with_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="5dp"
        android:includeFontPadding="false"
        android:paddingTop="20dp"
        android:padding="@dimen/_8sdp"
        android:text="@string/with_draw_label"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_with_image"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/text_with_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/with_image_label"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_delete_note_message" />

    <TextView
        android:id="@+id/text_only_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/only_text_label"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_with_draw" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_with_image"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>