<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_block_ads_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_delete"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/cd_icon_delete_note"
        android:src="@drawable/ads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/ads_fuck_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/image_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_delete"
        app:layout_constraintStart_toEndOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_delete_note_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/disable_ads_click_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_dis_ads_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/buy_disable_ads_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/text_delete_note_message" />

    <TextView
        android:id="@+id/text_disable_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/dis_ad_label"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dis_ads_message"
        app:layout_constraintVertical_bias="0.233" />

    <TextView
        android:id="@+id/text_cancel_forever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:background="@drawable/background_dark"
        android:padding="@dimen/_8sdp"
        android:text="@string/not_show_more_label"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_disable_ads"
        android:layout_marginRight="@dimen/_8sdp" />

    <TextView
        android:id="@+id/text_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/ok_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_disable_ads"
        app:layout_constraintTop_toBottomOf="@id/text_dis_ads_message"
        app:layout_constraintVertical_bias="0.239" />


</androidx.constraintlayout.widget.ConstraintLayout>